[package]
name = "btest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[dependencies]
bevy = { version = "0.10.1" } #, features = ["dynamic_linking"] }

